add navigation to home page

--- a/WebUI/FMIRatingsWeb/public_html/index.html
+++ b/WebUI/FMIRatingsWeb/public_html/index.html
@@ -22,6 +22,8 @@ and open the template in the editor.
         <div class="container-fluid">
             <div class="row">
                 <a href="nonregistered-user-homepage.html">Нерегистриран - тестов линк</a>
+                <br/>
+                <a href="home-page.html">Регистриран и логнат - тестов линк</a>
             </div>
         </div>
     </body>
