--- a/WebUI/FMIRatingsWeb/public_html/home-page.html
+++ b/WebUI/FMIRatingsWeb/public_html/home-page.html
@@ -43,7 +43,7 @@ and open the template in the editor.
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
-                            <li class="active"><a href="#">Начало <span class="sr-only">(current)</span></a></li>
+                            <li class="active"><a href="#start-page">Начало <span class="sr-only">(current)</span></a></li>
                             <li><a href="#">Курсове</a></li>
                             <li><a href="#">Преподаватели</a></li>
                             <li class="dropdown">
@@ -73,7 +73,7 @@ and open the template in the editor.
             </nav>
             
             <!--Body wrapper-->
-            <div id="body-wrapper">
+            <div id="body-wrapper" class = "row">
             </div>
 
         </div>
