--- a/WebUI/FMIRatingsWeb/public_html/home-page.html
+++ b/WebUI/FMIRatingsWeb/public_html/home-page.html
@@ -44,8 +44,8 @@ and open the template in the editor.
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
                             <li class="active"><a href="#start-page">Начало <span class="sr-only">(current)</span></a></li>
-                            <li><a href="#">Курсове</a></li>
-                            <li><a href="#">Преподаватели</a></li>
+                            <li><a href="#disciplines-list-page">Курсове</a></li>
+                            <li><a href="#teachers-list-page">Преподаватели</a></li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
                                 <ul class="dropdown-menu" role="menu">
