add disciplite detailes header panel

--- a/WebUI/FMIRatingsWeb/public_html/navbar-html/discipline-details/discipline-details.html
+++ b/WebUI/FMIRatingsWeb/public_html/navbar-html/discipline-details/discipline-details.html
@@ -6,6 +6,64 @@ and open the template in the editor.
 -->
 <div class = "container-fluid">
     <div class = "jumbotron">
-        <h4 id = "discipline-title">Test title</h4>
+        <div class=" container">
+            <div class="pull-left">
+                <h3 id = "discipline-title">Name of Course</h3> 
+                <h3>Lecturer</h3> 
+
+                <span class="label label-info">Credits:</span>
+                <span>5</span>
+                <span class="label label-info">Type:</span>
+                <span>OKN</span>               
+                
+            </div>
+
+            <table class="pull-right table rating-table table-condensed">
+                <th>
+                   Rating    
+                </th>
+                <tr>
+                    <td class="progress-label-td">Helpfulness</td>
+                    <td>
+                         <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+                                <span class="sr-only">40% Complete (success)</span>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="progress-label-td">Easiness</td>
+                    <td>
+                         <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+                                <span class="sr-only">40% Complete (success)</span>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="progress-label-td">Interest</td>
+                    <td>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+                                <span class="sr-only">40% Complete (success)</span>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="progress-label-td">Занимавка</td>
+                    <td>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+                                <span class="sr-only">40% Complete (success)</span>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+            </table>
+
+        </div>
     </div>
 </div>
