--- a/WebUI/FMIRatingsWeb/public_html/navbar-html/disciplines-list-page.html
+++ b/WebUI/FMIRatingsWeb/public_html/navbar-html/disciplines-list-page.html
@@ -4,7 +4,7 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
-<div class = "container-fluid" >
+<div class = "container-fluid inner-container" >
     
     <div class="panel-group" id="accordion" role="tablist">
         <div class="panel panel-default" id="1">
