--- a/WebUI/FMIRatingsWeb/public_html/navbar-html/teachers-list-page.html
+++ b/WebUI/FMIRatingsWeb/public_html/navbar-html/teachers-list-page.html
@@ -4,7 +4,7 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
-<div class = "container-fluid">
+<div class = "container-fluid inner-container">
     <div class="list-group">
         <a href="#" class="list-group-item list-group-item-success" >Dapibus ac facilisis in</a>
         <a href="#" class="list-group-item list-group-item-info">Cras sit amet nibh libero</a>
