add materials tab

--- a/WebUI/FMIRatingsWeb/public_html/navbar-html/discipline-details/discipline-rate-table.html
+++ b/WebUI/FMIRatingsWeb/public_html/navbar-html/discipline-details/discipline-rate-table.html
@@ -8,40 +8,35 @@ and open the template in the editor.
     <div class="form-group rate-group">
         <label for="helpfulness">Полезност</label>
         <input type="number" name="helpfulness" id="helpfulness" class="rating" 
-               data-empty-value="4" data-clearable =""
-               data-clearable-icon="glyphicon glyphicon-trash" 
+               data-empty-value="4"
                data-active-icon="glyphicon glyphicon-star" 
                data-inactive-icon="glyphicon glyphicon-star-empty"/>
     </div>
     <div class="form-group rate-group">
         <label for="easyness">Леснота</label>
         <input type="number" name="easyness" id="easyness" class="rating" 
-               data-empty-value="4" data-clearable =""
-               data-clearable-icon="glyphicon glyphicon-trash" 
+               data-empty-value="4"
                data-active-icon="glyphicon glyphicon-star" 
                data-inactive-icon="glyphicon glyphicon-star-empty"/>
     </div>
     <div class="form-group rate-group">
         <label for="interesting">Интерес</label>
         <input type="number" name="interesting" id="interesting" class="rating" 
-               data-empty-value="4" data-clearable =""
-               data-clearable-icon="glyphicon glyphicon-trash" 
+               data-empty-value="4"
                data-active-icon="glyphicon glyphicon-star" 
                data-inactive-icon="glyphicon glyphicon-star-empty"/>
     </div>
     <div class="form-group rate-group">
         <label for="hardness">Натовареност</label>
         <input type="number" name="hardness" id="hardness" class="rating" 
-               data-empty-value="4" data-clearable =""
-               data-clearable-icon="glyphicon glyphicon-trash" 
+               data-empty-value="4"
                data-active-icon="glyphicon glyphicon-star" 
                data-inactive-icon="glyphicon glyphicon-star-empty"/>
     </div>
     <div class="form-group rate-group">
         <label for="clearance">Яснота</label>
         <input type="number" name="clearance" id="clearance" class="rating" 
-               data-empty-value="4" data-clearable =" "
-               data-clearable-icon="glyphicon glyphicon-trash" 
+               data-empty-value="4" 
                data-active-icon="glyphicon glyphicon-star" 
                data-inactive-icon="glyphicon glyphicon-star-empty"/>
     </div>
