add back button to list of teachers and disciplines

--- a/WebUI/FMIRatingsWeb/public_html/navbar-html/discipline-details/discipline-details.html
+++ b/WebUI/FMIRatingsWeb/public_html/navbar-html/discipline-details/discipline-details.html
@@ -76,6 +76,7 @@ and open the template in the editor.
             </table>
 
         </div>
+        <a class="show-list" href="#disciplines-list-page"><span class="glyphicon glyphicon-chevron-left pull-left"><strong> Всички курсове</strong></span></a>
     </div>
 
     <!--discipline details-->
@@ -92,3 +93,4 @@ and open the template in the editor.
 </div>
 
 <script src="js/navigation/disciplines.js"></script>
+<script src="js/navigation/return-to-list.js"></script>
