--- a/WebUI/FMIRatingsWeb/public_html/navbar-html/teacher-details/teacher-details.html
+++ b/WebUI/FMIRatingsWeb/public_html/navbar-html/teacher-details/teacher-details.html
@@ -8,6 +8,7 @@ and open the template in the editor.
 <div class = "container-fluid inner-container">
     <!--teacher info-->
     <div class = "jumbotron">
+        
         <div class=" container">
             <div class="pull-left">
                 <h3 id = "teacher-name">Name of teacher</h3>
@@ -76,8 +77,9 @@ and open the template in the editor.
             </table>
 
         </div>
+        <a class="show-list" href="#teachers-list-page"><span class="glyphicon glyphicon-chevron-left pull-left"><strong> Всички преподаватели</strong></span></a>
     </div>
-
+    
     <!--teacher details-->
     <ul class="nav nav-tabs" id="teacher-tabs-nav">
         <li role="presentation" class="active"><a href="#teacher-details-tab">Подробна информация</a></li>
@@ -91,4 +93,5 @@ and open the template in the editor.
 </div>
 
 <script src="js/navigation/teachers.js"></script>
+<script src="js/navigation/return-to-list.js"></script>
 
