add digits and avg points to rating table

--- a/WebUI/FMIRatingsWeb/public_html/navbar-html/discipline-details/discipline-details.html
+++ b/WebUI/FMIRatingsWeb/public_html/navbar-html/discipline-details/discipline-details.html
@@ -20,15 +20,18 @@ and open the template in the editor.
             </div>
 
             <table class="pull-right table rating-table table-condensed">
-                <!--                <th>
-                                   Rating    
-                                </th>-->
+               <tr>
+                        <td class="progress-label-td"><strong>Средна оценка:</strong></td>
+                        <td>
+                            <strong>0,5</strong>
+                        </td>
+                    </tr>
                 <tr>
                     <td class="progress-label-td">Полезност</td>
                     <td>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;">
-                                <span class="sr-only">100% Complete (success)</span>
+                                10
                             </div>
                         </div>
                     </td>
@@ -38,7 +41,7 @@ and open the template in the editor.
                     <td>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%;">
-                                <span class="sr-only">40% Complete (success)</span>
+                               3.5
                             </div>
                         </div>
                     </td>
@@ -48,7 +51,7 @@ and open the template in the editor.
                     <td>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;">
-                                <span class="sr-only">40% Complete (success)</span>
+                                4.3
                             </div>
                         </div>
                     </td>
@@ -58,7 +61,7 @@ and open the template in the editor.
                     <td>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-                                <span class="sr-only">40% Complete (success)</span>
+                               6.0
                             </div>
                         </div>
                     </td>
@@ -68,7 +71,7 @@ and open the template in the editor.
                     <td>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%;">
-                                <span class="sr-only">40% Complete (success)</span>
+                                1.0
                             </div>
                         </div>
                     </td>
