add lnks to download material

--- a/WebUI/FMIRatingsWeb/public_html/navbar-html/discipline-details/discipline-materials-tab.html
+++ b/WebUI/FMIRatingsWeb/public_html/navbar-html/discipline-details/discipline-materials-tab.html
@@ -18,23 +18,33 @@ and open the template in the editor.
     <ul class="list-group">
         <li class="list-group-item">
             Cras justo odio
-            <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>
+            <a href="#">
+                <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>
+            </a>
         </li>
         <li class="list-group-item">
             Dapibus ac facilisis in
-            <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>
+            <a href="#">
+                <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>
+            </a>
         </li>
         <li class="list-group-item">
             Morbi leo risus
-            <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>
+            <a href="#">
+                <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>
+            </a>
         </li>
         <li class="list-group-item">
             Porta ac consectetur ac
-            <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>
+            <a href="#">
+                <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>
+            </a>
         </li>
         <li class="list-group-item">
             Vestibulum at eros
-            <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>
+            <a href="#">
+                <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>
+            </a>
         </li>
     </ul>
 </div>
