add teacher and disciplines type

--- a/WebUI/FMIRatingsWeb/public_html/navbar-html/teacher-details/teacher-rate-table.html
+++ b/WebUI/FMIRatingsWeb/public_html/navbar-html/teacher-details/teacher-rate-table.html
@@ -9,6 +9,7 @@ and open the template in the editor.
         <label for="clearance">Яснота</label>
         <input type="number" name="clearance" id="clearance" class="rating" 
                data-empty-value="4"
+               data-max="5" data-min="1"
                data-active-icon="glyphicon glyphicon-star" 
                data-inactive-icon="glyphicon glyphicon-star-empty"/>
     </div>
@@ -16,6 +17,7 @@ and open the template in the editor.
         <label for="enthusiasm">Ентусиазъм</label>
         <input type="number" name="enthusiasm" id="enthusiasm" class="rating" 
                data-empty-value="4"
+               data-max="5" data-min="1"
                data-active-icon="glyphicon glyphicon-star" 
                data-inactive-icon="glyphicon glyphicon-star-empty"/>
     </div>
@@ -23,6 +25,7 @@ and open the template in the editor.
         <label for="criteria">Критерий на оценяване</label>
         <input type="number" name="criteria" id="criteria" class="rating" 
                data-empty-value="4"
+               data-max="5" data-min="1"
                data-active-icon="glyphicon glyphicon-star" 
                data-inactive-icon="glyphicon glyphicon-star-empty"/>
     </div>
@@ -30,6 +33,7 @@ and open the template in the editor.
         <label for="speed">Скорост на преподаване</label>
         <input type="number" name="speed" id="speed" class="rating" 
                data-empty-value="4"
+               data-max="5" data-min="1"
                data-active-icon="glyphicon glyphicon-star" 
                data-inactive-icon="glyphicon glyphicon-star-empty"/>
     </div>
@@ -37,6 +41,7 @@ and open the template in the editor.
         <label for="range">Обхват на преподавания материал</label>
         <input type="number" name="range" id="range" class="rating" 
                data-empty-value="4" 
+               data-max="5" data-min="1"
                data-active-icon="glyphicon glyphicon-star" 
                data-inactive-icon="glyphicon glyphicon-star-empty"/>
     </div>
