--- a/WebUI/FMIRatingsWeb/public_html/navbar-html/discipline-details/discipline-rate-table.html
+++ b/WebUI/FMIRatingsWeb/public_html/navbar-html/discipline-details/discipline-rate-table.html
@@ -9,6 +9,7 @@ and open the template in the editor.
         <label for="helpfulness">Полезност</label>
         <input type="number" name="helpfulness" id="helpfulness" class="rating" 
                data-empty-value="4"
+               data-max="5" data-min="1"
                data-active-icon="glyphicon glyphicon-star" 
                data-inactive-icon="glyphicon glyphicon-star-empty"/>
     </div>
@@ -16,6 +17,7 @@ and open the template in the editor.
         <label for="easyness">Леснота</label>
         <input type="number" name="easyness" id="easyness" class="rating" 
                data-empty-value="4"
+               data-max="5" data-min="1"
                data-active-icon="glyphicon glyphicon-star" 
                data-inactive-icon="glyphicon glyphicon-star-empty"/>
     </div>
@@ -23,6 +25,7 @@ and open the template in the editor.
         <label for="interesting">Интерес</label>
         <input type="number" name="interesting" id="interesting" class="rating" 
                data-empty-value="4"
+               data-max="5" data-min="1"
                data-active-icon="glyphicon glyphicon-star" 
                data-inactive-icon="glyphicon glyphicon-star-empty"/>
     </div>
@@ -30,6 +33,7 @@ and open the template in the editor.
         <label for="hardness">Натовареност</label>
         <input type="number" name="hardness" id="hardness" class="rating" 
                data-empty-value="4"
+               data-max="5" data-min="1"
                data-active-icon="glyphicon glyphicon-star" 
                data-inactive-icon="glyphicon glyphicon-star-empty"/>
     </div>
@@ -37,6 +41,7 @@ and open the template in the editor.
         <label for="clearance">Яснота</label>
         <input type="number" name="clearance" id="clearance" class="rating" 
                data-empty-value="4" 
+               data-max="5" data-min="1"
                data-active-icon="glyphicon glyphicon-star" 
                data-inactive-icon="glyphicon glyphicon-star-empty"/>
     </div>
