Add some initial files for angular js

--- a/WebUI/FMIRatingsWeb/public_html/index.html
+++ b/WebUI/FMIRatingsWeb/public_html/index.html
@@ -4,7 +4,7 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
-<html>
+<html data-ng-app="fmiRatingsApp">
     <head>
         <title>FMI Ratings</title>
         <meta charset="utf-8">
@@ -17,6 +17,7 @@ and open the template in the editor.
         <link rel="stylesheet" href="css/main.css">
 
         <script src="js/vendor/jquery/jquery.js"></script>
+        <script src="js/controllers.js"></script>
     </head>
     <body>
         <div class="container-fluid">
