--- a/WebUI/FMIRatingsWeb/public_html/home-page.html
+++ b/WebUI/FMIRatingsWeb/public_html/home-page.html
@@ -4,7 +4,7 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
-<html>
+<html data-ng-app="fmiRatingsApp">
     <head>
         <title>FMI Ratings</title>
         <meta charset="utf-8">
@@ -20,8 +20,10 @@ and open the template in the editor.
         <script src="js/vendor/jquery/jquery.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/navigation/navbar.js"></script>
+        <script src="bower_components/angular/angular.js"></script>
+        <script src="js/controllers.js"></script>
     </head>
-    <body>
+    <body ng-controller="HomeController">
         <div class="container-fluid">
 
             <!--Menu-->
