add login controller

--- a/WebUI/FMIRatingsWeb/public_html/nonregistered-user-homepage.html
+++ b/WebUI/FMIRatingsWeb/public_html/nonregistered-user-homepage.html
@@ -41,21 +41,21 @@ and open the template in the editor.
                                     <h4 class="modal-title" id="myModalLabel">Вход</h4>
                                 </div>
                                 <div class="modal-body">
-                                    <form role="form">
+                                    <form role="form" ng-controller="LoginCtrl" ng-app = "login">
                                         <div class="form-group">
                                             <label for="email">Email адрес</label>
-                                            <input type="email" class="form-control" id="email" placeholder="Въведи email" required>
+                                            <input type="email" class="form-control" id="email" placeholder="Въведи email" ng-model="formInfo.UserName" required>
                                         </div>
                                         <div class="form-group">
                                             <label for="pass">Парола</label>
-                                            <input type="password" class="form-control" id="password" placeholder="Въведи парола" required>
+                                            <input type="password" class="form-control" id="password" placeholder="Въведи парола" ng-model="formInfo.Password" required>
                                         </div>
                                         <!--                                        <div class="checkbox">
                                                                                     <label>
                                                                                         <input type="checkbox"> Check me out
                                                                                     </label>
                                                                                 </div>-->
-                                        <button type="submit" class="btn btn-primary">Вход</button>
+                                        <button type="submit" class="btn btn-primary" ng-click="saveData()">Вход</button>
                                     </form>
                                 </div>
                             </div>
@@ -148,18 +148,16 @@ and open the template in the editor.
 
                                         <button type="submit" class="btn btn-primary" ng-click="saveData()">Регистрация</button>
 
-                                        <span>{{formInfo}}</span>
                                     </form>
                                 </div>
                             </div>
                         </div>
                     </div>
-
-
                 </div>
             </div>
         </div>
         <script src="js/registration-controller.js"></script>
+        <script src="js/login-controller.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
     </body>
 </html>
