--- a/WebUI/FMIRatingsWeb/public_html/nonregistered-user-homepage.html
+++ b/WebUI/FMIRatingsWeb/public_html/nonregistered-user-homepage.html
@@ -44,11 +44,11 @@ and open the template in the editor.
                                     <form role="form" ng-controller="LoginCtrl" >
                                         <div class="form-group">
                                             <label for="email">Email адрес</label>
-                                            <input type="email" class="form-control" id="email" placeholder="Въведи email" ng-model="loginFormInfo.UserName"  required>
+                                            <input type="email" class="form-control" id="email" placeholder="Въведи email" ng-model="loginFormInfo.Name"  required>
                                         </div>
                                         <div class="form-group">
                                             <label for="pass">Парола</label>
-                                            <input type="password" class="form-control" id="password" placeholder="Въведи парола" ng-model="loginFormInfo.UserName" required>
+                                            <input type="password" class="form-control" id="password" placeholder="Въведи парола" ng-model="loginFormInfo.Password" required>
                                         </div>
                                         <!--                                        <div class="checkbox">
                                                                                     <label>
