--- a/WebUI/FMIRatingsWeb/public_html/index.html
+++ b/WebUI/FMIRatingsWeb/public_html/index.html
@@ -18,6 +18,7 @@ and open the template in the editor.
 
         <script src="js/vendor/jquery/jquery.js"></script>
         <script src="js/controllers.js"></script>
+        <script src="js/index.js"></script>
     </head>
     <body>
         <div class="container-fluid">
