--- a/WebUI/FMIRatingsWeb/public_html/home-page.html
+++ b/WebUI/FMIRatingsWeb/public_html/home-page.html
@@ -68,5 +68,6 @@ and open the template in the editor.
             </div>
 
         </div>
+        <script src="js/navigation/teachers.js"></script>
     </body>
 </html>
