--- a/WebUI/FMIRatingsWeb/public_html/navbar-html/disciplines-list-page.html
+++ b/WebUI/FMIRatingsWeb/public_html/navbar-html/disciplines-list-page.html
@@ -10,19 +10,41 @@ and open the template in the editor.
 <div class = "container-fluid inner-container">
 
     <div class="panel-group" id="discipline-type-accordion" role="tablist" ng-controller="CoursesCtrl">
-            <!--<p>{{text}}</p>-->
-        <div ng-repeat ='type in data' class="panel panel-default" id='discipline-type-template'>
-            <div class="panel-heading" role="tab" id="typeHeadingOne">
+        <!--<p>{{text}}</p>-->
+        <div ng-repeat ='category in data' class="panel panel-default">
+            <div class="panel-heading" role="tab" id="{{category.name}}">
                 <h4 class="panel-title">
-                    <a data-toggle="collapse" data-parent="#discipline-type-accordion" href="#collapseTypeOne" aria-expanded="true" aria-controls="collapseTypeOne">
-                        {{type.name}}
+                    <a data-toggle="collapse" data-parent="#discipline-type-accordion" href="#{{category.id}}category" aria-expanded="true" aria-controls="{{category.id}}category">
+                        {{category.name}}
                     </a>
                 </h4>
             </div>
-            <div id="collapseTypeOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="typeHeadingOne">
-                <div class="panel-body">
 
+            <div id="{{category.id}}category" class="panel-collapse collapse" role="tabpanel" aria-labelledby="typeHeadingOne">
+                <div  class="panel-body">
+                    <div class="panel-group" id="{{category.id}}accordion" role="tablist" ng-controller="CoursesCtrl">
 
+                        <div ng-repeat="course in category.courses" class="panel-group" role="tablist">
+                            <div class="panel panel-default">
+                                <div class="panel-heading" role="tab" id="{{course.name}}">
+                                    <h4 class="panel-title">
+                                        <a data-toggle="collapse" data-parent="#{{category.id}}accordion" href="#{{course.id}}course" aria-expanded="true" aria-controls="{{course.id}}course">
+                                            {{course.name}}
+                                        </a>                    
+                                    </h4>
+
+                                </div>
+                                <div id="{{course.id}}course" class="panel-collapse collapse" role="tabpanel" aria-labelledby="{{course.name}}">
+                                    <div class="panel-body">
+                                        <p>{{course.description}}</p>
+                                        <button class="btn btn-primary pull-right discipline-open" type="submit">Виж курса</button>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </div>
 
                 </div>
             </div>
@@ -32,4 +54,4 @@ and open the template in the editor.
 </div>
 <!--<script src="js/navigation/disciplines.js"></script>-->
 <!--<script src='js/controller.js'></script>-->
- 
+
