--- a/WebUI/FMIRatingsWeb/public_html/navbar-html/discipline-details/discipline-details.html
+++ b/WebUI/FMIRatingsWeb/public_html/navbar-html/discipline-details/discipline-details.html
@@ -4,12 +4,15 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular.min.js"></script>
+<script src="js/controller.js"></script>
+
 <div class = "container-fluid inner-container">
     <!--discipline info-->
     <div class = "jumbotron">
         <div class=" container">
-            <div class="pull-left">
-                <h3 id = "discipline-title">Name of Course</h3> 
+            <div class="pull-left" ng-controller="CoursesCtrl">
+                <h3 id = "discipline-title">{{dataCourse.name}}</h3> 
                 <h3>Lecturer</h3> 
 
                 <span class="label label-info">Credits:</span>
