add teacher view and controller to be the same as discipline ones

--- a/WebUI/FMIRatingsWeb/public_html/navbar-html/teacher-details/teacher-details.html
+++ b/WebUI/FMIRatingsWeb/public_html/navbar-html/teacher-details/teacher-details.html
@@ -4,14 +4,15 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular.min.js"></script>
+<script src="js/controller.js"></script>
 
 <div class = "container-fluid inner-container">
     <!--teacher info-->
     <div class = "jumbotron">
-
         <div class=" container">
-            <div class="pull-left">
-                <h3 id = "teacher-name">Name of teacher</h3>
+            <div class="pull-left" ng-controller="TeachersCtrl">
+                <h3 id = "teacher-name">{{dataTeacher.name}}</h3>
 
                 <span class="label label-info">Катедра:</span>
                 <span>КН</span>
