--- a/WebUI/FMIRatingsWeb/public_html/navbar-html/discipline-details/discipline-details.html
+++ b/WebUI/FMIRatingsWeb/public_html/navbar-html/discipline-details/discipline-details.html
@@ -13,12 +13,12 @@ and open the template in the editor.
         <div class=" container">
             <div class="pull-left" ng-controller="disciplineDetailsController">
                 <h3 id = "discipline-title">{{dataCourse.name}}</h3> 
-                <h3>Lecturer</h3> 
+                <!--<h3>Lecturer</h3>--> 
 
-                <span class="label label-info">Credits:</span>
+                <span class="label label-info">Кредити:</span>
                 <span>5</span>
-                <span class="label label-info">Type:</span>
-                <span>OKN</span>               
+                <span class="label label-info">Категория:</span>
+                <span>{{dataCourse.category}}</span>               
 
             </div>
 
@@ -29,52 +29,12 @@ and open the template in the editor.
                             <strong>0,5</strong>
                         </td>
                     </tr>
-                <tr>
-                    <td class="progress-label-td">Полезност</td>
+                <tr ng-repeat='vote in votes.votes'>
+                    <td class="progress-label-td">{{vote.criterionName}}</td>
                     <td>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;">
-                                10
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="progress-label-td">Леснота</td>
-                    <td>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%;">
-                               3.5
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="progress-label-td">Интерес</td>
-                    <td>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;">
-                                4.3
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="progress-label-td">Натовареност</td>
-                    <td>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-                               6.0
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="progress-label-td">Яснота</td>
-                    <td>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%;">
-                                1.0
+                            <div class="progress-bar" role="progressbar" aria-valuenow="{{vote.avarage}}" aria-valuemin="0" aria-valuemax="5" style="width: {{(vote.avarage/5)*100}}%;">
+                                
                             </div>
                         </div>
                     </td>
