--- a/WebUI/FMIRatingsWeb/public_html/navbar-html/teacher-details/teacher-details.html
+++ b/WebUI/FMIRatingsWeb/public_html/navbar-html/teacher-details/teacher-details.html
@@ -4,14 +4,14 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular.min.js"></script>
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular.min.js"></script>
 <script src="js/controller.js"></script>
-
+ -->
 <div class = "container-fluid inner-container">
     <!--teacher info-->
     <div class = "jumbotron">
         <div class=" container">
-            <div class="pull-left" ng-controller="TeachersCtrl">
+            <div class="pull-left" ng-controller="teacherDetailsController">
                 <h3 id = "teacher-name">{{dataTeacher.name}}</h3>
 
                 <span class="label label-info">Катедра:</span>
